--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="Numero1">Numero 1\n</string>
     <string name="Numero2">Numero 2\n</string>
     <string name="Ejercicio1">Ejercicio 1</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
     <string name="click">Click</string>
     <string name="Pizzas">Pizzas</string>
     <string name="Bebidas">Bebidas</string>
-    <string name="Complementos">Complementos</string>
+    <string name="Complementos">Entrantes</string>
     <string name="VerPedido">Ver pedido</string>
     <string name="Salir">Salir\t\t\t\t</string>
 </resources>
